--- a/style.css
+++ b/style.css
@@ -344,3 +344,85 @@ button#submitForm:hover {
         width: 80px;
     }
 }
+
+
+
+span 
+{
+    position: relative;
+    top: 20px;
+    color: white;
+    display: inline-block;
+    font-size: 5rem;
+    text-shadow: 0 1px 0 #b7b7b7, 0 2px 0 #b7b7b7, 0 3px 0 #b7b7b7, 6px 0 transparent, 0 9px 0 transparent,0 10px 10px rgba(0, 0, 0, 0.5);
+    animation: bounce 0.7s ease infinite alternate;
+}
+h1 span:nth-child(2)
+{
+    animation-delay: 0.1s;
+}
+h1 span:nth-child(3)
+{
+    animation-delay: 0.2s;
+}
+
+
+h1 span:nth-child(4)
+{
+    animation-delay: 0.3s;
+}
+
+h1 span:nth-child(5)
+{
+    animation-delay: 0.4s;
+}
+
+h1 span:nth-child(6)
+{
+    animation-delay: 0.5s;
+}
+
+h1 span:nth-child(7)
+{
+    animation-delay: 0.6s;
+}
+
+h1 span:nth-child(8)
+{
+    animation-delay: 0.7s;
+}
+
+h1 span:nth-child(9)
+{
+    animation-delay: 0.8s;
+}
+
+h1 span:nth-child(10)
+{
+    animation-delay: 0.9s;
+}
+
+h1 span:nth-child(11)
+{
+    animation-delay: 1s;
+}
+
+h1 span:nth-child(12)
+{
+    animation-delay: 1.1s;
+}
+
+h1 span:nth-child(13)
+{
+    animation-delay: 1.2s;
+}
+
+@keyframes bounce
+{
+    100%
+    {
+        top: -20px;
+        text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc,0 8px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc , 0 60px 30px rgba(0, 0, 0, 0.3);
+    }
+    
+}
