--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
-:root {
-    /** Add custom variables here **/
-}
 
 *, *::after, *::before {
     margin: 0;
@@ -10,7 +7,8 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,body
+{
     height: 100%;
     width: 100%;
 }
@@ -49,11 +47,51 @@ h1 {
     width: 90%;
     max-width: 600px;
     border-radius: 100px;
-    overflow: hidden;
     background-color: white;
     display: flex;
     align-items: center;
     padding: 5px;
+}
+
+.search-container::after,.search-container::before
+{
+    border-radius: 100px;
+    content: "";
+    position: absolute;
+    width: calc(100% + 10px);
+    height: calc(100% + 10px);
+    /* background-image: conic-gradient(from var(--angle),transparent, red,green,yellow,orange,salmon,pink); */
+    background-image: conic-gradient(from var(--angle), #ff4545,#00ff99,#006aff,#ff0095,#ff4545);
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: -1;
+    animation: 2s spin linear infinite;
+}
+
+@property --angle  
+{
+    syntax:"<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+@keyframes spin
+{
+    from 
+    {
+        --angle:0deg;
+    }
+    to 
+    {
+        --angle:360deg;
+    }
+    
+}
+.search-container::before
+{
+    filter: blur(1.5rem);
+    opacity: 0.5;
 }
 
 /* ✅ Responsive input */
@@ -320,7 +358,7 @@ button#submitForm:hover {
         padding: 0 2rem;
     }
     h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
 
@@ -350,78 +388,22 @@ button#submitForm:hover {
 span 
 {
     position: relative;
-    top: 20px;
     color: white;
     display: inline-block;
     font-size: 5rem;
     text-shadow: 0 1px 0 #b7b7b7, 0 2px 0 #b7b7b7, 0 3px 0 #b7b7b7, 6px 0 transparent, 0 9px 0 transparent,0 10px 10px rgba(0, 0, 0, 0.5);
-    animation: bounce 0.7s ease infinite alternate;
-}
-h1 span:nth-child(2)
-{
-    animation-delay: 0.1s;
-}
-h1 span:nth-child(3)
-{
-    animation-delay: 0.2s;
+    animation: bounce 0.5s ease infinite alternate;
+    will-change: transform;
+    letter-spacing: 10px;
 }
 
-
-h1 span:nth-child(4)
-{
-    animation-delay: 0.3s;
-}
-
-h1 span:nth-child(5)
-{
-    animation-delay: 0.4s;
-}
-
-h1 span:nth-child(6)
-{
-    animation-delay: 0.5s;
-}
-
-h1 span:nth-child(7)
-{
-    animation-delay: 0.6s;
-}
-
-h1 span:nth-child(8)
-{
-    animation-delay: 0.7s;
-}
-
-h1 span:nth-child(9)
-{
-    animation-delay: 0.8s;
-}
-
-h1 span:nth-child(10)
-{
-    animation-delay: 0.9s;
-}
-
-h1 span:nth-child(11)
-{
-    animation-delay: 1s;
-}
-
-h1 span:nth-child(12)
-{
-    animation-delay: 1.1s;
-}
-
-h1 span:nth-child(13)
-{
-    animation-delay: 1.2s;
-}
 
 @keyframes bounce
 {
+
     100%
     {
-        top: -20px;
+        transform: translateY(-20px);
         text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc, 0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc,0 8px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc , 0 60px 30px rgba(0, 0, 0, 0.3);
     }
     
